...
                android:background="@drawable/hover_button"
                android:text="Log in"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

            <Button
                android:id="@+id/switchLoginToRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/hover_button"
                android:text="Register"
                android:textColor="#bad0ef"
...
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical"
        android:weightSum="100">

        <EditText
            android:id="@+id/enterEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:hint="Enter your email"
...
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"

            />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"

...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF" />

        <Button

            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"

            android:background="@drawable/hover_button"
            android:text="Log in"
...
