<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal" >


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:paddingTop="20dp"
        android:src="@drawable/only_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/norec_text"
        android:text="Sorry, we've had a problem loading your data. Please log out and in, and try again.\nIf this does not fix the problem, please try uninstall and install app again." />

</LinearLayout>