...
            <Button
                android:id="@+id/switchRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/hover_button"
                android:text="Register"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
...
        android:layout_weight="35"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:weightSum="100">

        <EditText
            android:id="@+id/enterEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:hint="Enter your email"
...
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/enterPassword1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:hint="Enter your password"
...
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/enterPassword2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:hint="Confirm your password"
...
